Add project Kontaktz-CLI
Additionally:
* Improve semantics of .project-markup by using article-tags instead of divs
* Fix small indentation issue

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta charset="UTF8">
+    <meta charset="utf-8">
     <meta name="description" content="Swedish orienteer and programmer">
     <meta name="author" content="Samuel Plumppu">
     <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/3.0.2/normalize.css">
@@ -73,114 +73,9 @@
       <div class="content">
         <h2>Projects</h2>
         <hr>
-
         <div class="showcase">
-          <!-- TODO: change font size of technology-lists -->
 
-          <div class="project">
-            <div class="display">
-              <a href="https://github.com/greenheart/AchtungPanzer" target="_blank" rel="noopener noreferrer">
-                <img alt="Intense battle in Achtung Panzer" src="images/achtung_intense_battle_wow_2.png">
-              </a>
-              <div class="arrow arrow-prev"></div>
-              <div class="arrow arrow-next"></div>
-            </div>
-
-            <hr>
-
-            <div class="project-info">
-              <div class="project-description">
-                <h3><a href="https://github.com/greenheart/AchtungPanzer" target="_blank" rel="noopener noreferrer">Achtung Panzer</a></h3>
-                <p>
-                  An intense 2D tank battle for two players on the same computer.
-                  Including two different ammo-types (long-range/small damage main cannon and short-range/high damage grenade launcher)
-                  which together with the randomly generated terrain, slowing world-objects like water and destroyable world-objects like stones
-                  results in a pretty neat little action-game where strategy and timing is crucial to crush your opponent.
-                </p>
-                <p>
-                  This was a project I did together with <a href="https://github.com/greenheart/AchtungPanzer#creators" target="_blank" rel="noopener noreferrer">some friends</a>
-                  for a programming class in school. It was my first real project
-                  using Git and even though we used a Git-GUI, I learned pretty much about soure control.
-                </p>
-              </div>
-              <div class="project-tech">
-                <h3>Technologies</h3>
-                <ul class="tech-list">
-                  <li>Python 3</li>
-                  <li>PyGame</li>
-                </ul>
-              </div>
-            </div>
-          </div><!-- project -->
-
-
-
-
-
-          <div class="project">
-            <div class="display">
-              <a href="https://github.com/Catagen/Meteor-TicTacToe" target="_blank" rel="noopener noreferrer">
-                <img alt="The GUI of Tic Tac Toe" src="images/meteor-tic-tac-toe.png">
-              </a>
-              <div class="arrow arrow-prev"></div>
-              <div class="arrow arrow-next"></div>
-            </div>
-
-            <hr>
-
-            <div class="project-info">
-              <div class="project-description">
-                <h3><a href="https://github.com/Catagen/Meteor-TicTacToe" target="_blank" rel="noopener noreferrer">Meteor Tic Tac Toe</a></h3>
-                <p>
-                  A simple game built together with <a href="https://github.com/Catagen"target="_blank" rel="noopener noreferrer">Szymon</a>
-                  to learn the basics of the Meteor Platform.
-                  An interesting feature we implemented was the Room-system that enables several players to
-                  play at the same time and join simply by entering a room's number
-                </p>
-              </div>
-
-              <div class="project-tech">
-                <h3>Technologies</h3>
-                  <ul class="tech-list">
-                    <li>Meteor</li>
-                    <li>Mongo DB</li>
-                  </ul>
-              </div>
-            </div>
-          </div><!-- project -->
-
-
-          <div class="project">
-            <div class="display">
-              <a href="">
-                <img alt="" src="">
-              </a>
-                <div class="arrow arrow-prev"></div>
-                <div class="arrow arrow-next"></div>
-            </div>
-
-            <hr>
-
-            <div class="project-info">
-              <div class="project-description">
-                <h3><a href="">The not so busy business</a></h3>
-                <p>
-                  A text-adventure game written in python. Really fun to create and loads of
-                  good practice to get fundamental programming concepts in place.
-                  <!-- TODO: Add img, link and better description. Also upload to github -->
-                </p>
-              </div>
-              <div class="project-tech">
-                <h3>Technologies</h3>
-                <ul class="tech-list">
-                  <li>Python 3</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="project">
+          <article class="project">
             <div class="display">
               <a href="https://github.com/greenheart/goa-space-survival" target="_blank" rel="noopener noreferrer">
                 <img alt="Goa Space Survival" src="images/goa-space-survival-2.png">
@@ -219,7 +114,142 @@
                 </ul>
               </div>
             </div>
-          </div><!-- project -->
+          </article><!-- project -->
+
+
+
+          <article class="project">
+            <div class="display">
+              <a href="https://github.com/greenheart/AchtungPanzer" target="_blank" rel="noopener noreferrer">
+                <img alt="Intense battle in Achtung Panzer" src="images/achtung_intense_battle_wow_2.png">
+              </a>
+              <div class="arrow arrow-prev"></div>
+              <div class="arrow arrow-next"></div>
+            </div>
+
+            <hr>
+
+            <div class="project-info">
+              <div class="project-description">
+                <h3><a href="https://github.com/greenheart/AchtungPanzer" target="_blank" rel="noopener noreferrer">Achtung Panzer</a></h3>
+                <p>
+                  An intense 2D tank battle for two players on the same computer.
+                  Including two different ammo-types (long-range/small damage main cannon and short-range/high damage grenade launcher)
+                  which together with the randomly generated terrain, slowing world-objects like water and destroyable world-objects like stones
+                  results in a pretty neat little action-game where strategy and timing is crucial to crush your opponent.
+                </p>
+                <p>
+                  This was a project I did together with <a href="https://github.com/greenheart/AchtungPanzer#creators" target="_blank" rel="noopener noreferrer">some friends</a>
+                  for a programming class in school. It was my first real project
+                  using Git and even though we used a Git-GUI, I learned pretty much about soure control.
+                </p>
+              </div>
+              <div class="project-tech">
+                <h3>Technologies</h3>
+                <ul class="tech-list">
+                  <li>Python 3</li>
+                  <li>PyGame</li>
+                </ul>
+              </div>
+            </div>
+          </article><!-- project -->
+
+
+          <article class="project">
+            <div class="display">
+              <a href="https://github.com/Greenheart/kontaktz-cli" target="_blank" rel="noopener noreferrer">
+                <img alt="Screenshot of kontaktz-cli" src="images/kontaktz-cli.png">
+              </a>
+              <div class="arrow arrow-prev"></div>
+              <div class="arrow arrow-next"></div>
+            </div>
+
+            <hr>
+
+            <div class="project-info">
+              <div class="project-description">
+                <h3><a href="https://github.com/Greenheart/kontaktz-cli" target="_blank" rel="noopener noreferrer">Kontaktz-CLI</a></h3>
+                <p>
+                  A small school project where I learned how to use the Redis database in python progams.
+                  Features of this CLI include creation, deletion and search of contacts.
+                </p>
+              </div>
+              <div class="project-tech">
+                <h3>Technologies</h3>
+                <ul class="tech-list">
+                  <li>Python</li>
+                  <li>Redis</li>
+                  <li>redis-py</li>
+                  <li>PrettyTable</li>
+                </ul>
+              </div>
+            </div>
+          </article>
+
+
+          <article class="project">
+            <div class="display">
+              <a href="https://github.com/Catagen/Meteor-TicTacToe" target="_blank" rel="noopener noreferrer">
+                <img alt="The GUI of Tic Tac Toe" src="images/meteor-tic-tac-toe.png">
+              </a>
+              <div class="arrow arrow-prev"></div>
+              <div class="arrow arrow-next"></div>
+            </div>
+
+            <hr>
+
+            <div class="project-info">
+              <div class="project-description">
+                <h3><a href="https://github.com/Catagen/Meteor-TicTacToe" target="_blank" rel="noopener noreferrer">Meteor Tic Tac Toe</a></h3>
+                <p>
+                  A simple game built together with <a href="https://github.com/Catagen"target="_blank" rel="noopener noreferrer">Szymon</a>
+                  to learn the basics of the Meteor Platform.
+                  An interesting feature we implemented was the Room-system that enables several players to
+                  play at the same time and join simply by entering a room's number
+                </p>
+              </div>
+
+              <div class="project-tech">
+                <h3>Technologies</h3>
+                <ul class="tech-list">
+                  <li>Meteor</li>
+                  <li>Mongo DB</li>
+                </ul>
+              </div>
+            </div>
+          </article><!-- project -->
+
+
+          <article class="project">
+            <div class="display">
+              <a href="">
+                <img alt="" src="">
+              </a>
+                <div class="arrow arrow-prev"></div>
+                <div class="arrow arrow-next"></div>
+            </div>
+
+            <hr>
+
+            <div class="project-info">
+              <div class="project-description">
+                <h3><a href="">The not so busy business</a></h3>
+                <p>
+                  A text-adventure game written in python. Really fun to create and loads of
+                  good practice to get fundamental programming concepts in place.
+                  <!-- TODO: Add img, link and better description. Also upload to github -->
+                </p>
+              </div>
+              <div class="project-tech">
+                <h3>Technologies</h3>
+                <ul class="tech-list">
+                  <li>Python 3</li>
+                </ul>
+              </div>
+            </div>
+          </article>
+
+
 
         </div><!-- showcase -->
       </div><!-- content -->
