Add JavaScript to .tech-list for projects.

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
               <div class="project-tech">
                 <h3>Technologies</h3>
                 <ul class="tech-list">
+                  <li>JavaScript</li>
                   <li>Meteor</li>
                   <li>Phaser</li>
                   <li>Mongo DB</li>
@@ -212,6 +213,7 @@
               <div class="project-tech">
                 <h3>Technologies</h3>
                 <ul class="tech-list">
+                  <li>JavaScript</li>
                   <li>Meteor</li>
                   <li>Mongo DB</li>
                 </ul>
