Add project 'The not so Busy Business'
Also change position of this project.

Additionally:
* Minor rephrasing for description of Achtung Panzer

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <h3><a href="https://github.com/greenheart/AchtungPanzer" target="_blank" rel="noopener noreferrer">Achtung Panzer</a></h3>
                 <p>
                   An intense 2D tank battle for two players on the same computer.
-                  Including two different ammo-types (long-range/small damage main cannon and short-range/high damage grenade launcher)
+                  Including two different ammo-types (long-range/low damage main cannon and short-range/high damage grenade launcher)
                   which together with the randomly generated terrain, slowing world-objects like water and destroyable world-objects like stones
                   results in a pretty neat little action-game where strategy and timing is crucial to crush your opponent.
                 </p>
@@ -154,6 +154,41 @@
               </div>
             </div>
           </article><!-- project -->
+
+
+          <article class="project">
+            <div class="display">
+              <a href="https://github.com/Greenheart/cars_game" target="_blank" rel="noopener noreferrer">
+                <img alt="Screenshot of the game's core gameplay" src="images/the-not-so-busy-business.png">
+              </a>
+                <div class="arrow arrow-prev"></div>
+                <div class="arrow arrow-next"></div>
+            </div>
+
+            <hr>
+
+            <div class="project-info">
+              <div class="project-description">
+                <h3><a href="https://github.com/Greenheart/cars_game" target="_blank" rel="noopener noreferrer">The not so Busy Business</a></h3>
+                <p>
+                  A challenging text strategy game about a taxi/delivery-service.
+                  Including features like highscores, car-upgrades and character development.
+                  Really fun to create and loads of good practice to get fundamental programming concepts in place.
+                </p>
+                <p>
+                  My biggest challenge with this project was to format the text-interface to fit the console. Especially the highscores were tricky.
+                  This was my last serious project built without a version control system as I realized it was hard to keep track of changes in a file 1000+ lines long.
+                  This project also taught me why modular code beat long functions that does multiple things... &#9786;
+                </p>
+              </div>
+              <div class="project-tech">
+                <h3>Technologies</h3>
+                <ul class="tech-list">
+                  <li>Python 3</li>
+                </ul>
+              </div>
+            </div>
+          </article>
 
 
           <article class="project">
@@ -220,37 +255,6 @@
               </div>
             </div>
           </article><!-- project -->
-
-
-          <article class="project">
-            <div class="display">
-              <a href="">
-                <img alt="" src="">
-              </a>
-                <div class="arrow arrow-prev"></div>
-                <div class="arrow arrow-next"></div>
-            </div>
-
-            <hr>
-
-            <div class="project-info">
-              <div class="project-description">
-                <h3><a href="">The not so busy business</a></h3>
-                <p>
-                  A text-adventure game written in python. Really fun to create and loads of
-                  good practice to get fundamental programming concepts in place.
-                  <!-- TODO: Add img, link and better description. Also upload to github -->
-                </p>
-              </div>
-              <div class="project-tech">
-                <h3>Technologies</h3>
-                <ul class="tech-list">
-                  <li>Python 3</li>
-                </ul>
-              </div>
-            </div>
-          </article>
-
 
 
         </div><!-- showcase -->
