--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/3.0.2/normalize.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway:200|Poiret+One' rel='stylesheet' type='text/css'>
     <link href='style.css' rel='stylesheet' type='text/css'>
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="showcase.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
     <header>
@@ -49,22 +47,24 @@
         <img alt="Samuel Plumppu" src="images/samuel.jpg">
 
         <div id="about-text">
-        <p>
-          I am an 18 years old orienteer and software developer from Borås, Sweden.
-          My passion is to use technology to solve real world problems. I enjoy to constantly improve my skills and find better solutions.
-        </p>
-        <p>
-          I have been programming regularly since late 2013 using Python. So far, I have built some cool games which you can find out more about down below.
-          In June 2015 I found the great site <a href="http://www.freecodecamp.com "target="_blank" rel="noopener noreferrer">Free Code Camp</a> which I use to learn full stack JavaScript development.
-          My personal goal is to finish the site's curriculum and be job-ready by autumn 2016.
-          During the autumn of 2015 I started a project together with my friend <a href="https://github.com/Catagen "target="_blank" rel="noopener noreferrer">Szymon</a>
-          where we build 5 full stack JavaScript apps using <a href="http://www.meteor.com" target="_blank" rel="noopener noreferrer">Meteor</a>. Check them out down below!
-        </p>
-        <p>My other big interest is to practice orienteering, which I do almost on a daily basis.</p>
+          <p>
+            I am an <span id="age"></span> years old orienteer and software developer from Borås, Sweden.
+            My passion is to use technology to solve real world problems. I enjoy to constantly improve my skills and find better solutions.
+          </p>
+          <p>
+            I have been programming regularly since late 2013 using Python. So far, I have built some cool games which you can check out down below.
+            In June 2015, I found the fantastic open source community <a href="http://www.freecodecamp.com "target="_blank" rel="noopener noreferrer">Free Code Camp</a> where developers meet and collaborate on projects to <build portfolios> each other . I currently learn full stack JavaScript development.
+            My personal goal is to finish the site's curriculum and be job-ready by the end of 2016.
+            As the graduation project for the last year at Eksjö Gymnasium, me and my friend <a href="https://github.com/Catagen "target="_blank" rel="noopener noreferrer">Szymon</a>
+            wrote a technical report where we described the JavaScript-platform <a href="http://www.meteor.com" target="_blank" rel="noopener noreferrer">Meteor</a> and evaluated how it's suited for prototype applications.
+            In the process we built several full stack applications and some of which are showcased down below.
+          </p>
+          <p>My other big interest is to practice orienteering, which I do almost on a daily basis.</p>
 
-        <!-- fit Self-driven in somewhere with development -->
+          <!-- fit Self-driven in somewhere with development -->
 
-        <!-- TODO: finish this text -->
+          <!-- TODO: finish this text -->
+        </div>
       </div>
     </section>
 
@@ -301,7 +301,7 @@
                 <div style="width: 60%;"></div>
               </div>
             </div>
-          </div><!--// col -->
+          </div><!-- col -->
 
           <div class="col">
             <div class="skill">
@@ -334,10 +334,10 @@
                 <div style="width: 20%;"></div>
               </div>
             </div>
-          </div><!--// col -->
+          </div><!-- col -->
 
-        </div><!--// skills wrapper -->
-      </div><!--// content -->
+        </div><!-- skills wrapper -->
+      </div><!-- content -->
     </section>
 
 
@@ -357,6 +357,7 @@
         </div>
       </div>
     </section>
-
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="page.js"></script>
   </body>
 </html>
