Improve about-section with a complete description

--- a/index.html
+++ b/index.html
@@ -48,22 +48,30 @@
 
         <div id="about-text">
           <p>
-            I am an <span id="age"></span> years old orienteer and software developer from Borås, Sweden.
-            My passion is to use technology to solve real world problems. I enjoy to constantly improve my skills and find better solutions.
+            I am an <span id="age">19</span>-year-old orienteer and software developer from Borås, Sweden who
+            enjoy solving problems, learning and constantly challenging my abilities. Another thing I really love is to share
+            my knowledge and help others. For example, I've helped fellow learners from the fantastic open source community
+            <a href="http://www.freecodecamp.com "target="_blank" rel="noopener noreferrer">Free Code Camp</a> by mainly asking
+            guiding questions or pair programming to allow the learner to get as much value as possible out of each challenge.
+            I've also found this to be very worthwhile since they also teach me a lot in the process!
           </p>
           <p>
-            I have been programming regularly since late 2013 using Python. So far, I have built some cool games which you can check out down below.
-            In June 2015, I found the fantastic open source community <a href="http://www.freecodecamp.com "target="_blank" rel="noopener noreferrer">Free Code Camp</a> where developers meet and collaborate on projects to <build portfolios> each other . I currently learn full stack JavaScript development.
-            My personal goal is to finish the site's curriculum and be job-ready by the end of 2016.
-            As the graduation project for the last year at Eksjö Gymnasium, me and my friend <a href="https://github.com/Catagen "target="_blank" rel="noopener noreferrer">Szymon</a>
-            wrote a technical report where we described the JavaScript-platform <a href="http://www.meteor.com" target="_blank" rel="noopener noreferrer">Meteor</a> and evaluated how it's suited for prototype applications.
-            In the process we built several full stack applications and some of which are showcased down below.
+            When working with others, I like to think about the bigger picture and help several members of the team achieve more
+            rather than just completing my own task. This is partly because I enjoy watching others get more confident with their skills,
+            but mainly because the easiest way to provide great value to a team is to help several others perform better.
+            Some may define a good programmer as someone who is productive on their own. I would rather say someone even better
+            can help several others become good programmers.
           </p>
-          <p>My other big interest is to practice orienteering, which I do almost on a daily basis.</p>
-
-          <!-- fit Self-driven in somewhere with development -->
-
-          <!-- TODO: finish this text -->
+          <p>
+            I have been programming regularly since late 2013 and worked in several different environments using mainly Python and JavaScript.
+            For example, I have developed games, CLI: s and web applications in various forms. You can check some of these projects out down below!
+            At the moment, I am working through Free Code Camp's four certifications to learn more about developing full stack applications using
+            JavaScript. This will also be a great opportunity to get real world experience through the finishing non-profit projects.
+          </p>
+          <p>
+            When not programming, I like to practice orienteering, a sport that provides challenging problem solving as well as good training and sometimes even adventures!
+            I practice almost on a daily basis and regularly compete at a national level.
+          </p>
         </div>
       </div>
     </section>
