--- a/index.html
+++ b/index.html
@@ -57,19 +57,20 @@
           </p>
           <p>
             When working with others, I like to think about the bigger picture and help several members of the team achieve more
-            rather than just completing my own task. This is partly because I enjoy watching others get more confident with their skills,
-            but mainly because the easiest way to provide great value to a team is to help several others perform better.
-            Some may define a good programmer as someone who is productive on their own. I would rather say someone even better
-            can help several others become good programmers.
+            rather than just completing my own task. This is partly because I enjoy watching others get more confident with their
+            skills, but mainly because the easiest way to provide great value to a team is to help several others perform better.
+            Some may define a good software developer as someone who is productive on their own. I would rather say a good developer
+            is someone who help others become good developers.
           </p>
           <p>
             I have been programming regularly since late 2013 and worked in several different environments using mainly Python and JavaScript.
-            For example, I have developed games, CLI: s and web applications in various forms. You can check some of these projects out down below!
+            For example, I have developed games, CLIs and web applications in various forms. You can find some of these projects down below!
             At the moment, I am working through Free Code Camp's four certifications to learn more about developing full stack applications using
-            JavaScript. This will also be a great opportunity to get real world experience through the finishing non-profit projects.
+            JavaScript. This will also be a great opportunity to get real world experience through the conclusive non-profit projects.
+            You can follow my progress on <a href="https://medium.com/my-adventure" target="_blank" rel="noopener noreferrer">my blog</a>.
           </p>
           <p>
-            When not programming, I like to practice orienteering, a sport that provides challenging problem solving as well as good training and sometimes even adventures!
+            Another big part of my life is orienteering, a sport that provides challenging problem solving as well as good excercise and sometimes even adventures!
             I practice almost on a daily basis and regularly compete at a national level.
           </p>
         </div>
