--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </ul>
               </div>
             </div>
-          </article><!-- project -->
+          </article>
 
 
 
@@ -162,7 +162,54 @@
                 </ul>
               </div>
             </div>
-          </article><!-- project -->
+          </article>
+
+
+          <article class="project">
+            <div class="display">
+              <a href="https://github.com/teknik-eksjo/chronos" target="_blank" rel="noopener noreferrer">
+                <img alt="Screenshot from Chronos, the scheduling app" src="">
+              </a>
+              <div class="arrow arrow-prev"></div>
+              <div class="arrow arrow-next"></div>
+            </div>
+
+            <hr>
+
+            <div class="project-info">
+              <div class="project-description">
+                <h3><a href="https://github.com/teknik-eksjo/chronos" target="_blank" rel="noopener noreferrer">Chronos</a></h3>
+                <p>
+                  The most ambitious project up until this point. To wrap up the courses Programming 2, User Interface and User Experience
+                  design 1 and Web Server Programming 1, me and my classmates wanted to give back to our school while at the same time get
+                  experience with a project that would involve the whole development process - all the way from figuring out a real world
+                  problem and gather information from users to testing potential solutions and compile even more feedback to
+                  finally implement, deploy and prepare the system for future maintenance.
+                </p>
+                <p>
+                  A really fun and stimulating project that taught me new technologies, a lot about project management using GitHub and how
+                  to collaborate better using git. For example, I became familiar with advanced git-tools like <code>stash</code>, <code>rebase</code>
+                  and working with branches specific for each feature/bugfix. However, the most important experience from this project was to
+                  communicate with the users and figure out what they actually needed through tests.
+                  <a href="https://docs.google.com/document/d/12icmtxmnCxTABIZLYqQA6nhTLd18bBpC3FEgKFgM1fA">Our notes from this process (Swedish)</a>
+                  are documented.
+                </p>
+              </div>
+              <div class="project-tech">
+                <h3>Technologies</h3>
+                <ul class="tech-list">
+                  <li>Python 3</li>
+                  <li>JavaScript</li>
+                  <li>Flask</li>
+                  <li>Docker</li>
+                  <li>Docker Compose</li>
+                  <li>PostgreSQL</li>
+                  <li>Bootstrap</li>
+                  <li>jQuery</li>
+                </ul>
+              </div>
+            </div>
+          </article>
 
 
           <article class="project">
@@ -263,7 +310,7 @@
                 </ul>
               </div>
             </div>
-          </article><!-- project -->
+          </article>
 
 
         </div><!-- showcase -->
