--- a/index.html
+++ b/index.html
@@ -322,21 +322,12 @@
       <div class="content">
         <h2>Skills</h2>
         <hr>
-        <!-- TODO:
-              * Use a 2-col-layout
-                * which may change to 1-col depending on screen size
-                  * @breakpoint  >  col.width change from 50% to 100%
-                  * second col drop down below
-                * Display skill-levels as bars to give an overview of how poficient I'm with different technologies
-      -->
-        <p>These are technologies I use regularly and am comfortable working with</p>
-        <!-- TODO: maybe change this to "tech. i use comfrtably and tech i'm currently learning" -->
         <div class="skills-wrapper">
           <div class="col">
             <div class="skill">
-              <h4>Python</h4>
+              <h4>JavaScript</h4>
               <div class="bar">
-                <div style="width: 60%;"></div>
+                <div style="width: 70%;"></div>
               </div>
             </div>
             <div class="skill">
@@ -357,13 +348,19 @@
                 <div style="width: 60%;"></div>
               </div>
             </div>
+            <div class="skill">
+              <h4>Phaser</h4>
+              <div class="bar">
+                <div style="width: 30%;"></div>
+              </div>
+            </div>
           </div><!-- col -->
 
           <div class="col">
             <div class="skill">
-              <h4>JavaScript</h4>
+              <h4>Python</h4>
               <div class="bar">
-                <div style="width: 80%;"></div>
+                <div style="width: 60%;"></div>
               </div>
             </div>
             <div class="skill">
