--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
           <a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer"><img alt="GitHub Logo" src="images/github-mark-white.svg"></a>
           <a href="https://gitter.im/Greenheart" target="_blank" rel="noopener noreferrer"><img alt="Gitter Logo" src="images/gitter-logo.png"></a>
           <a href="https://medium.com/my-adventure" target="_blank" rel="noopener noreferrer"><img alt="Medium Logo" src="images/medium-logo.png"></a>
+          <a href="https://linkedin.com/in/samuelplumppu"><img src="images/linkedin-logo.png" target="_blank" rel="noopener noreferrer" alt="LinkedIn Logo"></a>
           <a href="https://freecodecamp.com/Greenheart" target="_blank" rel="noopener noreferrer"><img alt="Free Code Camp Logo" src="images/fcc-puck-green.svg"></a>
           <a href="https://codepen.io/Greenheart" target="_blank" rel="noopener noreferrer"><img alt="CodePen Logo" src="images/codepen-logo.svg"></a>
         </div>
