Improve page responsiveness on smaller screens.
Not complete but it's a start

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="Swedish orienteer and programmer">
     <meta name="author" content="Samuel Plumppu">
     <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/4.1.1/normalize.css">
@@ -54,7 +55,7 @@
             my knowledge and help others. For example, I've helped fellow learners from the fantastic open source community
             <a href="http://www.freecodecamp.com "target="_blank" rel="noopener noreferrer">Free Code Camp</a> by mainly asking
             guiding questions or pair programming to allow the learner to get as much value as possible out of each challenge.
-            I've also found this to be very worthwhile since they also teach me a lot in the process!
+            I've also found this to be very worthwhile since they also teach me a lot in the process.
           </p>
           <p>
             When working with others, I like to think about the bigger picture and help several members of the team achieve more
@@ -110,13 +111,13 @@
                   that arises if you trust clients too much.
                   Knowledge like this will be useful in the future!
                 </p>
-                <p style="font-size: 1.1em;">
+                <p style="font-size: 1.1rem;">
                   A final warning: The simplistic gameplay proved to be quite addictive, so be careful if you try it... &#9786;
                 </p>
               </div>
 
               <div class="project-tech">
-                <h3>Technologies</h3>
+                <h4>Technologies</h4>
                 <ul class="tech-list">
                   <li>JavaScript</li>
                   <li>Meteor</li>
@@ -156,7 +157,7 @@
                 </p>
               </div>
               <div class="project-tech">
-                <h3>Technologies</h3>
+                <h4>Technologies</h4>
                 <ul class="tech-list">
                   <li>Python 3</li>
                   <li>PyGame</li>
@@ -197,7 +198,7 @@
                 </p>
               </div>
               <div class="project-tech">
-                <h3>Technologies</h3>
+                <h4>Technologies</h4>
                 <ul class="tech-list">
                   <li>Python 3</li>
                   <li>JavaScript</li>
@@ -239,7 +240,7 @@
                 </p>
               </div>
               <div class="project-tech">
-                <h3>Technologies</h3>
+                <h4>Technologies</h4>
                 <ul class="tech-list">
                   <li>Python 3</li>
                 </ul>
@@ -268,7 +269,7 @@
                 </p>
               </div>
               <div class="project-tech">
-                <h3>Technologies</h3>
+                <h4>Technologies</h4>
                 <ul class="tech-list">
                   <li>Python</li>
                   <li>Redis</li>
@@ -303,7 +304,7 @@
               </div>
 
               <div class="project-tech">
-                <h3>Technologies</h3>
+                <h4>Technologies</h4>
                 <ul class="tech-list">
                   <li>JavaScript</li>
                   <li>Meteor</li>
