Add toggle-menu for smaller screens.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,19 @@
           <li><a href="#projects">Projects</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#contact">Contact</a></li>
+          <li><img alt="Menu" id="toggle" src="images/menu.svg"></li>
         </ul>
       </nav>
+
+
+
+      <ul id="toggle-menu">
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+
     </header>
 
     <section id="top">
