Improve responsiveness of project-section.

--- a/index.html
+++ b/index.html
@@ -109,8 +109,18 @@
             <hr>
 
             <div class="project-info">
+              <h3><a href="https://github.com/greenheart/goa-space-survival" target="_blank" rel="noopener noreferrer">Goa Space Survival</a></h3>
+              <div class="project-tech">
+                <h4>Technologies</h4>
+                <ul class="tech-list">
+                  <li>JavaScript</li>
+                  <li>Meteor</li>
+                  <li>Phaser</li>
+                  <li>Mongo DB</li>
+                </ul>
+              </div>
+
               <div class="project-description">
-                <h3><a href="https://github.com/greenheart/goa-space-survival" target="_blank" rel="noopener noreferrer">Goa Space Survival</a></h3>
                 <p>
                   A space-survival game created with Phaser as the game engine and Meteor for the real-time highscores.
                   My main goal with this game was to spend a weekend to create a simple game with Phaser and then publish
@@ -125,16 +135,6 @@
                 <p style="font-size: 1.1rem;">
                   A final warning: The simplistic gameplay proved to be quite addictive, so be careful if you try it... &#9786;
                 </p>
-              </div>
-
-              <div class="project-tech">
-                <h4>Technologies</h4>
-                <ul class="tech-list">
-                  <li>JavaScript</li>
-                  <li>Meteor</li>
-                  <li>Phaser</li>
-                  <li>Mongo DB</li>
-                </ul>
               </div>
             </div>
           </article>
@@ -153,8 +153,16 @@
             <hr>
 
             <div class="project-info">
+              <h3><a href="https://github.com/greenheart/AchtungPanzer" target="_blank" rel="noopener noreferrer">Achtung Panzer</a></h3>
+              <div class="project-tech">
+                <h4>Technologies</h4>
+                <ul class="tech-list">
+                  <li>Python 3</li>
+                  <li>PyGame</li>
+                </ul>
+              </div>
+
               <div class="project-description">
-                <h3><a href="https://github.com/greenheart/AchtungPanzer" target="_blank" rel="noopener noreferrer">Achtung Panzer</a></h3>
                 <p>
                   An intense 2D tank battle for two players on the same computer.
                   Including two different ammo-types (long-range/low damage main cannon and short-range/high damage grenade launcher)
@@ -166,13 +174,6 @@
                   for a programming class in school. It was my first real project
                   using Git and even though we used a Git-GUI, I learned pretty much about soure control.
                 </p>
-              </div>
-              <div class="project-tech">
-                <h4>Technologies</h4>
-                <ul class="tech-list">
-                  <li>Python 3</li>
-                  <li>PyGame</li>
-                </ul>
               </div>
             </div>
           </article>
@@ -190,8 +191,22 @@
             <hr>
 
             <div class="project-info">
+              <h3><a href="https://github.com/teknik-eksjo/chronos" target="_blank" rel="noopener noreferrer">Chronos</a></h3>
+              <div class="project-tech">
+                <h4>Technologies</h4>
+                <ul class="tech-list">
+                  <li>Python 3</li>
+                  <li>JavaScript</li>
+                  <li>Flask</li>
+                  <li>Docker</li>
+                  <li>Docker Compose</li>
+                  <li>PostgreSQL</li>
+                  <li>Bootstrap</li>
+                  <li>jQuery</li>
+                </ul>
+              </div>
+
               <div class="project-description">
-                <h3><a href="https://github.com/teknik-eksjo/chronos" target="_blank" rel="noopener noreferrer">Chronos</a></h3>
                 <p>
                   The most ambitious project up until this point. To wrap up the courses Programming 2, User Interface and User Experience
                   design 1 and Web Server Programming 1, me and my classmates wanted to give back to our school while at the same time get
@@ -207,19 +222,6 @@
                   <a href="https://docs.google.com/document/d/12icmtxmnCxTABIZLYqQA6nhTLd18bBpC3FEgKFgM1fA">Our notes from this process (Swedish)</a>
                   are documented.
                 </p>
-              </div>
-              <div class="project-tech">
-                <h4>Technologies</h4>
-                <ul class="tech-list">
-                  <li>Python 3</li>
-                  <li>JavaScript</li>
-                  <li>Flask</li>
-                  <li>Docker</li>
-                  <li>Docker Compose</li>
-                  <li>PostgreSQL</li>
-                  <li>Bootstrap</li>
-                  <li>jQuery</li>
-                </ul>
               </div>
             </div>
           </article>
@@ -237,8 +239,15 @@
             <hr>
 
             <div class="project-info">
+              <h3><a href="https://github.com/Greenheart/cars_game" target="_blank" rel="noopener noreferrer">The not so Busy Business</a></h3>
+              <div class="project-tech">
+                <h4>Technologies</h4>
+                <ul class="tech-list">
+                  <li>Python 3</li>
+                </ul>
+              </div>
+
               <div class="project-description">
-                <h3><a href="https://github.com/Greenheart/cars_game" target="_blank" rel="noopener noreferrer">The not so Busy Business</a></h3>
                 <p>
                   A challenging text strategy game about a taxi/delivery-service.
                   Including features like highscores, car-upgrades and character development.
@@ -249,12 +258,6 @@
                   This was my last serious project built without a version control system as I realized it was hard to keep track of changes in a file 1000+ lines long.
                   This project also taught me why modular code beat long functions that does multiple things... &#9786;
                 </p>
-              </div>
-              <div class="project-tech">
-                <h4>Technologies</h4>
-                <ul class="tech-list">
-                  <li>Python 3</li>
-                </ul>
               </div>
             </div>
           </article>
@@ -272,13 +275,7 @@
             <hr>
 
             <div class="project-info">
-              <div class="project-description">
-                <h3><a href="https://github.com/Greenheart/kontaktz-cli" target="_blank" rel="noopener noreferrer">Kontaktz-CLI</a></h3>
-                <p>
-                  A small school project where I learned how to use the Redis database in python progams.
-                  Features of this CLI include creation, deletion and search of contacts.
-                </p>
-              </div>
+              <h3><a href="https://github.com/Greenheart/kontaktz-cli" target="_blank" rel="noopener noreferrer">Kontaktz-CLI</a></h3>
               <div class="project-tech">
                 <h4>Technologies</h4>
                 <ul class="tech-list">
@@ -288,11 +285,18 @@
                   <li>PrettyTable</li>
                 </ul>
               </div>
+
+              <div class="project-description">
+                <p>
+                  A small school project where I learned how to use the Redis database in python progams.
+                  Features of this CLI include creation, deletion and search of contacts.
+                </p>
+              </div>
             </div>
           </article>
 
 
-          <article class="project">
+          <article class="project" id="tic-tac-toe">
             <div class="display">
               <a href="https://github.com/Catagen/Meteor-TicTacToe" target="_blank" rel="noopener noreferrer">
                 <img alt="The GUI of Tic Tac Toe" src="images/meteor-tic-tac-toe.png">
@@ -304,16 +308,7 @@
             <hr>
 
             <div class="project-info">
-              <div class="project-description">
-                <h3><a href="https://github.com/Catagen/Meteor-TicTacToe" target="_blank" rel="noopener noreferrer">Meteor Tic Tac Toe</a></h3>
-                <p>
-                  A simple game built together with <a href="https://github.com/Catagen"target="_blank" rel="noopener noreferrer">Szymon</a>
-                  to learn the basics of the Meteor Platform.
-                  An interesting feature we implemented was the Room-system that enables several players to
-                  play at the same time and join simply by entering a room's number
-                </p>
-              </div>
-
+              <h3><a href="https://github.com/Catagen/Meteor-TicTacToe" target="_blank" rel="noopener noreferrer">Meteor Tic Tac Toe</a></h3>
               <div class="project-tech">
                 <h4>Technologies</h4>
                 <ul class="tech-list">
@@ -321,6 +316,15 @@
                   <li>Meteor</li>
                   <li>Mongo DB</li>
                 </ul>
+              </div>
+
+              <div class="project-description">
+                <p>
+                  A simple game built together with <a href="https://github.com/Catagen"target="_blank" rel="noopener noreferrer">Szymon</a>
+                  to learn the basics of the Meteor Platform.
+                  An interesting feature we implemented was the Room-system that enables several players to
+                  play at the same time and join simply by entering a room's number
+                </p>
               </div>
             </div>
           </article>
