Add screenshot for project Chronos.

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <article class="project">
             <div class="display">
               <a href="https://github.com/teknik-eksjo/chronos" target="_blank" rel="noopener noreferrer">
-                <img alt="Screenshot from Chronos, the scheduling app" src="">
+                <img alt="Screenshot from Chronos, the scheduling app" src="images/chronos-base-schedule.jpeg">
               </a>
               <div class="arrow arrow-prev"></div>
               <div class="arrow arrow-next"></div>
