Fix wrapping of navbar on small screens.
Did this by removing reduntant margins and paddings.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <nav>
-        <a href="#top"><img alt="compass-logo" src="images/compass.svg"></a>
+        <a id="img-link" href="#top"><img alt="compass-logo" src="images/compass.svg"></a>
         <ul class="left">
           <li><a href="#top">Samuel Plumppu</a></li>
         </ul>
